環境変数を更新

--- a/src/secrets/.env.prod
+++ b/src/secrets/.env.prod
@@ -1,4 +1,5 @@
-# 本番環境用  実際はgitignoreに入っている
-SECRET_KEY=django-insecure-^f15!b3h^i@w^xrif6=l56w*)x4e3m6gxl+s@1lwrg&*bdxg-7
+SECRET_KEY=xxx
 DEBUG=True
 ALLOWED_HOSTS=*
+STRIPE_API_SECRET_KEY=sk_test_xxxx
+MY_URL=0.0.0.0:7290
